Pull request #27: Fixed css issue for 0 score
Merge in NRCSAPPS/cpdifrontend from story/CIGCPDPH2-1258-Hafiz to develop

Squashed commit of the following:

commit e52477ccda9f06fec019b94ee3c702fe7d6d9f14
Author: hafiz.ahmad <hafiz.ahmad@usda.gov>
Date:   Wed Aug 16 10:49:07 2023 -0400

    Fixed css issue for 0 score

--- a/src/components/CPPEScoreView/cppe-score.scss
+++ b/src/components/CPPEScoreView/cppe-score.scss
@@ -273,7 +273,7 @@ a:hover {
 }
 
 .grey-box{
-    height: flex;
+    height: 25px;
     width: 36px;
     background: #75716E;
     border-radius:3px; 
